crates/aranya-policy-compiler/tests/data/type_errors/ffi_option_arg_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: option[int]
  |
3 |     return test::doit(Some(3))
  |                       ^^^^^^^ expected `int` but found `option[int]`
